# jimbo

./: .gitignore  .gitreview  MANIFEST.in  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
conf/: example.yaml
jimbo/: __init__.py  cli.py  client.py  config.py
jimbo/defaults/: local.json  remote.json  virtual.json
jimbo/tests/: test_jimbo.py
