[metadata]
name = jimbo
summary = Jimbo manages Artifactory repositories.
description-file =
    README.rst
author = Ruslan Kamaldinov
author-email = r.kamaldinov@gmail.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    jimbo

[entry_points]
console_scripts =
    jimbo = jimbo.cli:main
